tests/pass/real_promotion.jolt
fn main() void {
    let r = 1 + 2.0;
    ret;
}
