tests/fail/unknown_type.jolt
fn main() void {
    let x: no_such_type = 1;
}
